# QuickScrub

./: .gitignore  1-QuickScrub_V1.instructions.md  2-QuickScrub_V1.instructions_fix.md  2025-07-08_03-17-27_scrub.md  AGENTS.md  AGENTS.txt  Dockerfile  README.md  clean_restart.sh  notes  package-lock.json  pii-test-ALL-EXPANDED.md  pii-test-data-ALL-DENSE.txt  pyproject.toml
QuickScrub/: cli.py  main.py
QuickScrub/api/: endpoints.py
QuickScrub/core/: engine.py  registry.py
QuickScrub/models/: data_models.py
QuickScrub/recognizers/: base.py  credit_card_recognizer.py  email_recognizer.py  ip_recognizer.py  ipv6_recognizer.py  mac_address_recognizer.py  mac_recognizer.py  phone_recognizer.py  secret_recognizer.py  sensitive_url_recognizer.py
QuickScrub/tests/: test_engine.py  test_new_recognizers.py  test_recognizers.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.js  style.css
