[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "QuickScrub"
version = "1.0.0"
description = "A local, modular PII scrubber with a web UI."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "pydantic>=2.0",
    "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "requests",
]
